- collapsable Preferences categories https://github.com/Siderite/lichessTools/issues/42 - fixing drag piece bug with Shape rank https://github.com/Siderite/lichessTools/issues/113

--- a/tools/preferences/tool.css
+++ b/tools/preferences/tool.css
@@ -56,10 +56,45 @@ div.lichessTools-preferences form > div {
 }
 
 div.lichessTools-preferences h3 {
-  float:right;
   position: relative;
   top: -0.75em;
   font-size:x-large;
+  width:100%;
+  z-index:1;
+}
+
+div.lichessTools-preferences h3 > label {
+  float:right;
+}
+
+div.lichessTools-preferences input.categoryToggle {
+  display:none;
+}
+
+div.lichessTools-preferences form > div:has(input.categoryToggle) > h3 label {
+  cursor:zoom-out;
+}
+
+div.lichessTools-preferences form > div:has(input.categoryToggle:checked) > h3 label {
+  cursor:zoom-in;
+}
+
+div.lichessTools-preferences form > div:has(input.categoryToggle:checked) section {
+  display:none;
+}
+
+div.lichessTools-preferences form > div:has(input.categoryToggle:checked) > h3 {
+  width:100%;
+}
+
+div.lichessTools-preferences form > div:has(input.categoryToggle:checked) > h3:after {
+  margin-left: 1em;
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 80%;
+  height: 1px;
+  background: linear-gradient(to right, rgba(214, 79, 0, 0.5), hsl(37, 7%, 14%) 80%);
 }
 
 @keyframes lichessTools-fire {
